--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
