--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,17 @@
     "@uiw/codemirror-theme-dracula": "^4.21.23",
     "@uiw/react-codemirror": "^4.21.23",
     "axios": "^1.6.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.334.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
-    "split-pane-react": "^0.1.3"
+    "split-pane-react": "^0.1.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
