--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,8 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
+    "react-resizable-panels": "^2.0.11",
     "react-router-dom": "^6.22.1",
-    "split-pane-react": "^0.1.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
