--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.1",
     "@uiw/codemirror-extensions-langs": "^4.21.23",
     "@uiw/codemirror-theme-dracula": "^4.21.23",
